libstream-more-perl (0.5.1) UNRELEASED; urgency=low

  * Stream::Queue improvements
   - permanent data is keeped in log, chunks created per-client on depand
   - gc() method instead of old clean_ids(), called only from time to time
   - stress tests and benchmarks

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 01 Jun 2010 16:52:11 +0400

libstream-more-perl (0.5.0) unstable; urgency=low

  * Stream::Filter::Subfilter implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 05 Feb 2010 21:03:56 +0300

libstream-more-perl (0.4.8) unstable; urgency=low

  * Stream::Out::Any implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 04 Feb 2010 20:18:22 +0300

libstream-more-perl (0.4.7) unstable; urgency=low

  * Stream::Queue: clean method removes lock files from client dirs too

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 25 Nov 2009 22:38:41 +0300

libstream-more-perl (0.4.6) unstable; urgency=low

  * Stream::Formatter::CSV: die when no columns specified
  * Strem::Formatter::JSON: using JSON::XS instead of broken JSON

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 25 Nov 2009 21:10:21 +0300

libstream-more-perl (0.4.5) unstable; urgency=low

  * Stream::Formatter::CSV formatter (not really CSV...)

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 24 Nov 2009 21:55:01 +0300

libstream-more-perl (0.4.4) unstable; urgency=low

  * Stream::Queue is fixed to be at least hardy-compatible
  * Stream::Formatter::JSON implemented
  * Stream::Queue calls clean on construction

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 23 Nov 2009 19:53:36 +0300

libstream-more-perl (0.4.3) unstable; urgency=low

  * Stream::Queue implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 27 Oct 2009 03:27:42 +0300

libstream-more-perl (0.4.2) unstable; urgency=low
